@@ -125,6 +125,7 @@ Changes Since 0.5
   - Float placement made configurable, default changed to "here definitely".
   - Typeset generic topic as "quote block with title".
   - Use template (file and configuration option).
+  - Render doctest blocks as literal blocks (fixes [ 1586058 ]).
 
 * docutils/writers/manpage.py
 
